# brainfuck

./: .gitignore  CMakeLists.txt  FindLLVM.cmake  Lumosity.io  README.md  bfast.h  bfc  bfc1.cpp  bfcodegen.cpp  bfcodegen.h  bfcompiler.cpp  bfjit.cpp  bfparser.h
scripts/: bfc  install.sh
src/: bf.cpp  bfcodegen.cpp  bfcodegen.h  bfcompiler.cpp  bfcompiler.h  bfjit.cpp  bfjit.h
test/: RedHelloWorld.bf  rot13.b
